tests/ui/rfc-2632-const-trait-impl/const-closure-trait-method-fail.stderr
error[E0277]: the trait bound `(): ~const Tr` is not satisfied in `fn(()) -> i32 {<() as Tr>::a}`
  --> $DIR/const-closure-trait-method-fail.rs:18:23
   |
LL | const _: () = assert!(need_const_closure(Tr::a) == 42);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^ within `fn(()) -> i32 {<() as Tr>::a}`, the trait `~const Tr` is not implemented for `()`
   |
note: the trait `Tr` is implemented for `()`, but that implementation is not `const`
  --> $DIR/const-closure-trait-method-fail.rs:18:23
   |
LL | const _: () = assert!(need_const_closure(Tr::a) == 42);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required because it appears within the type `fn(()) -> i32 {<() as Tr>::a}`

error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   |
   = note: calling non-const function `<() as Tr>::a`
   |
note: inside `<fn(()) -> i32 {<() as Tr>::a} as FnOnce<((),)>>::call_once - shim(fn(()) -> i32 {<() as Tr>::a})`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
note: inside `need_const_closure::<fn(()) -> i32 {<() as Tr>::a}>`
  --> $DIR/const-closure-trait-method-fail.rs:15:5
   |
LL |     x(())
   |     ^^^^^
note: inside `_`
  --> $DIR/const-closure-trait-method-fail.rs:18:23
   |
LL | const _: () = assert!(need_const_closure(Tr::a) == 42);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0277.
For more information about an error, try `rustc --explain E0080`.
